 ^ Add ability to set default view in JController.
 ^ Refactor backend master controllers to use parent display method where possible.
 ^ Refactor and expand implementation of JModelAdmin.
 ^ Added 2nd director separator arguement to JPath::check (to pass to JPath::clean).
 # Fixed return value of JPath::check (was not returning the cleaned path).

23-Apr-2010 Mark Dexter
^ Added UI for new fields in contacts, newsfeeds, weblinks (Elin Waring)
^ Added publish_up and publish_down checks to models (Elin Waring) 

23-Apr-2010 Jean-Marie Simonet
# Bug fix + new string
$ Refactoring ini/keys in libraries/J/Installer/
# Bug fix in com_languages (Thank you Dennis)
$ Refactored com_languages keys + added strings
$ Refactoring ini/keys in libraries/J/mail, plugin, registry, session + some
$ Refactoring ini/keys in libraries/J/updater, user

23-Apr-2010 Christophe Demko
^ renaming some functions in JLanguage and JText relative to 'plural' and 'ignored search words' function

22-Apr-2010 Hannes Papenberg
# Fixed JDispatcherTest
# Fixed JCacheConstructTest
# Fixed Parameters in ContentModelAtricles
# Fixed some bugs in com_installer

22-Apr-2010 Jean-Marie Simonet
$ Refactoring ini/keys in libraries/J/Installer/pack and plugin + some
# Bug fix in login.php
$ Standardize Show, Hide, Hits
# Bug fix in feed.php (Thanks Dennis)
# More Bug fixes concerning feeds in com_contents
$ Refactoring ini/keys in libraries/J/Installer/template + helper

22-Apr-2010 Andrew Eddie
 ^ Refactoring of internal property names in the MVC classes.

21-Apr-2010 Christophe Demko
$# Changing en_GB to en-GB in sample_data.sql

21-Apr-2010 Andrew Eddie
 + Add magic __get method to JDate.

21-Apr-2010 Jean-Marie Simonet
$ Refactoring ini/keys in libraries/J/Installer/component
$ Refactoring ini/keys in libraries/J/Installer/file
$ Refactoring ini/keys in libraries/J/Installer/language
$ Refactoring ini/keys in libraries/J/Installer/library
$ Refactoring ini/keys in libraries/J/Installer/module